# alidns-rs

./: Cargo.toml
src/: main.rs
