[package]
name = "alidns"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.82"
clap = { version = "4.5.16", features = ["derive"] }
faststr = "0.2.22"
hickory-client = "0.24.1"
hickory-proto = "0.24.1"
hickory-server = "0.24.1"
idna = "1.0.2"
rand = "0.8.5"
reqwest = { version = "0.12.7", features = ["rustls-tls", "http2"], default-features = false }
serde = { version = "1.0.209", features = ["derive"] }
sha2 = "0.10.8"
sonic-rs = "0.3.12"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
